--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
-
-@variant dark (&:where(.dark, .dark *));
+@plugin "daisyui";
 
 /**
   * A catch-all path to Django template files, JavaScript, and Python files
